--- a/mokytojai.html
+++ b/mokytojai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Oct 31 2024 18:53:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Nov 02 2024 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671a2f56ef2a1073319a64cf" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -203,7 +203,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -214,6 +214,7 @@ margin: 0rem !important;
             </div>
             <nav class="nav3_dropdown_list w-dropdown-list">
               <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
+              <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
               <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
               <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
@@ -252,11 +253,11 @@ margin: 0rem !important;
           <div class="container-large">
             <h1 class="padding-bottom padding-large">Kunu Studio Vilnius Mokytojai</h1>
             <div class="padding-section-large">
-              <div class="layout2_component">
+              <div id="egleu" class="layout2_component">
                 <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="layout2_image"></div>
                 <div class="layout2_content">
                   <h2>Eglė Ukanytė</h2>
-                  <h5>Studijos Įkūrėja, Choreografė ir Baleto bei Šiuolaikinio Šokio Mokytoja</h5>
+                  <h5>Studijos Įkūrėja, Choreografė ir Šokio Mokytoja</h5>
                   <div class="padding-bottom padding-small"></div>
                   <p>Eglė yra studijos įkūrėja ir laisvai samdoma šokio menininkė ir choreografė. 2020 m. Eglė baigė Lietuvos muzikos ir teatro akademiją, kur įgijo teatro meno magistro laipsnį. Bakalauro studijų metais pusę metų praleido mainų studijose Romoje, stažavosi Milane, Italijoje. Tuo metu taip pat dirbo teatre šokio atlikėja. 2023 m. rudenį įkūrė jaunimo šokio teatrą Kun/u.<br><br>Egle turi 8 m. patirtį mokant vaikus. Eglė yra įgijusi stiprius šokio pagrindus: šiuolaikinio šokio, tautinio bei baleto žanrų, šoko teatre bei įv. projektuose, miuzikluose. Skirtingus šokio stilius šoko nuo vaikystės, baigė choreografijos mokyklą bei šokio studijas Lietuvoje bei Italijoje.Eglė savo pamokose didelį dėmesį skiria vaizduotės bei kūrybiškumo lavinimui, naudoja šiuolaikinius mokymo metodus.</p>
                   <div class="padding-bottom padding-medium"></div>
@@ -265,8 +266,8 @@ margin: 0rem !important;
             </div>
           </div>
           <div class="container-large">
-            <div class="padding-section-large">
-              <div class="layout2_component">
+            <aside id="eglek" class="padding-section-large">
+              <div id="egleu" class="layout2_component">
                 <div class="mokytojai_image-wrapper"><img src="images/Screenshot-2024-09-21-at-19.03.59_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-19.03.59_1Screenshot-2024-09-21-at-19.03.59.webp 500w, images/Screenshot-2024-09-21-at-19.03.59_1.webp 660w" alt="" class="layout2_image"></div>
                 <div class="layout2_content">
                   <h2>Eglė Kraujalė</h2>
@@ -276,11 +277,11 @@ margin: 0rem !important;
                   <div class="padding-bottom padding-medium"></div>
                 </div>
               </div>
-            </div>
+            </aside>
           </div>
           <div class="container-large">
             <div class="padding-section-large">
-              <div class="layout2_component">
+              <div id="jolitas" class="layout2_component">
                 <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.59.42_1Screenshot-2024-09-21-at-18.59.42.webp 500w, images/Screenshot-2024-09-21-at-18.59.42_1.webp 591w" alt="" class="layout2_image"></div>
                 <div class="layout2_content">
                   <h2><strong>Jolita Svidraitė</strong></h2>
@@ -318,11 +319,10 @@ margin: 0rem !important;
             <div class="padding-bottom padding-medium"></div>
             <div class="footer1_top">
               <div class="footer1_content-left">
-                <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="div-block-2">
+                <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="footer_left_block">
                   <div id="w-node-_664c0f4a-47d6-b554-9de9-a7b2adea4727-67c79560" class="image_wrapper_footer"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="250px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt=""></div>
                   <div class="text-size-small">Ukanytes Projects, VšĮ<br>Įmonės kodas: 306675363<br>Manufaktūrų g. 16, LT-11342 Vilnius<br></div>
                   <div class="footer1_bottom">
-                    <div class="text-size-small">© Kunu Studio</div>
                     <div class="footer1_social">
                       <a aria-label="Instagram" href="https://www.instagram.com/kunustudio.vilnius/" class="social_link w-inline-block">
                         <div class="social_icon w-embed"><svg aria-hidden="true" fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -360,6 +360,7 @@ margin: 0rem !important;
               </div>
             </div>
             <div class="footer_padding"></div>
+            <div class="text-size-small">© Kunu Studio</div>
           </div>
         </div>
       </div>
