--- a/privacios-sokio-pamokos-ir-choreografija.html
+++ b/privacios-sokio-pamokos-ir-choreografija.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Oct 31 2024 18:53:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Nov 02 2024 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="670ff3dacf4d4bc10f99296c" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -221,6 +221,7 @@ margin: 0rem !important;
             </div>
             <nav class="nav3_dropdown_list w-dropdown-list">
               <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
+              <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
               <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
               <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Privačios Pamokos</a>
@@ -311,17 +312,23 @@ margin: 0rem !important;
               <div class="team4_component">
                 <div class="team4_list">
                   <div class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#egleu" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></a>
+                    </div>
                     <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
                     <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#eglek" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320.484375px, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></a>
+                    </div>
                     <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
                     <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#jolitas" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></a>
+                    </div>
                     <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
                     <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
@@ -367,7 +374,7 @@ margin: 0rem !important;
                     <div class="form_field-wrapper"><label for="Email-2" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Jūsų el.paštas" type="email" id="Email-2" required=""></div>
                     <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a27e-eb21a26f" class="form_field-wrapper"><label for="Telefonas-2" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas-2" data-name="Telefonas 2" placeholder="Jūsų telefonas" type="text" id="Telefonas-2"></div>
                     <div class="form_field-wrapper"><label for="Zinute-2" class="form_label">Žinutė*</label><textarea id="Zinute-2" name="Zinute-2" maxlength="5000" data-name="Zinute 2" placeholder="Jūsų žinutė" required="" class="form_input input-area w-input"></textarea></div>
-                    <div class="padding-bottom padding-xsmall"></div><input type="submit" data-wait="Please wait..." id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a287-eb21a26f" class="button w-button" value="Siųsti">
+                    <div class="padding-bottom padding-xsmall"></div><input type="submit" data-wait="Please wait..." id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a287-eb21a26f" class="button-bold w-button" value="Siųsti">
                   </form>
                   <div class="form_message-success w-form-done">
                     <div class="form_state-content">
@@ -409,11 +416,10 @@ margin: 0rem !important;
             <div class="padding-bottom padding-medium"></div>
             <div class="footer1_top">
               <div class="footer1_content-left">
-                <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="div-block-2">
+                <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="footer_left_block">
                   <div id="w-node-_664c0f4a-47d6-b554-9de9-a7b2adea4727-67c79560" class="image_wrapper_footer"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="250px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt=""></div>
                   <div class="text-size-small">Ukanytes Projects, VšĮ<br>Įmonės kodas: 306675363<br>Manufaktūrų g. 16, LT-11342 Vilnius<br></div>
                   <div class="footer1_bottom">
-                    <div class="text-size-small">© Kunu Studio</div>
                     <div class="footer1_social">
                       <a aria-label="Instagram" href="https://www.instagram.com/kunustudio.vilnius/" class="social_link w-inline-block">
                         <div class="social_icon w-embed"><svg aria-hidden="true" fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -451,6 +457,7 @@ margin: 0rem !important;
               </div>
             </div>
             <div class="footer_padding"></div>
+            <div class="text-size-small">© Kunu Studio</div>
           </div>
         </div>
       </div>
