--- a/sokio-pamokos-vaikuciams.html
+++ b/sokio-pamokos-vaikuciams.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  Last Published: Sat Nov 02 2024 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="670feb693f3482d4a4db0e01" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
+<html data-wf-page="6725fdc7c621bd945f100c71" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
-  <title>Baleto Pamokos Vilnuje</title>
-  <meta content="Mokykitės baleto Vilniuje! Baleto pamokos vaikams ir suaugusiems, tinkamos pradedantiesiems ir pažengusiems, suteiks elegancijos ir grakštumo jūsų judesiams." name="description">
-  <meta content="Baleto Pamokos Vilnuje" property="og:title">
-  <meta content="Mokykitės baleto Vilniuje! Baleto pamokos vaikams ir suaugusiems, tinkamos pradedantiesiems ir pažengusiems, suteiks elegancijos ir grakštumo jūsų judesiams." property="og:description">
+  <title>Šokio Pamokos Vaikučiams</title>
+  <meta content="Šiose pamokose susipažinsime su judesio pagrindais, mokysimės šokti per žaidimo prizmę, lavinsime ritmo pojūtį ir žengsime pirmuosiuos žingsnius į spalvingą šokio pasaul" name="description">
+  <meta content="Šokio Pamokos Vaikučiams" property="og:title">
+  <meta content="Šiose pamokose susipažinsime su judesio pagrindais, mokysimės šokti per žaidimo prizmę, lavinsime ritmo pojūtį ir žengsime pirmuosiuos žingsnius į spalvingą šokio pasaul" property="og:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Baleto Pamokos Vilnuje" property="twitter:title">
-  <meta content="Mokykitės baleto Vilniuje! Baleto pamokos vaikams ir suaugusiems, tinkamos pradedantiesiems ir pažengusiems, suteiks elegancijos ir grakštumo jūsų judesiams." property="twitter:description">
+  <meta content="Šokio Pamokos Vaikučiams" property="twitter:title">
+  <meta content="Šiose pamokose susipažinsime su judesio pagrindais, mokysimės šokti per žaidimo prizmę, lavinsime ritmo pojūtį ir žengsime pirmuosiuos žingsnius į spalvingą šokio pasaul" property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -23,7 +23,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://kunu.studio/baleto-pamokos" rel="canonical">
+  <link href="https://kunu.studio/sokio-pamokos-vaikuciams" rel="canonical">
   <style>
 * {
 -webkit-font-smoothing: antialiased;
@@ -221,9 +221,9 @@ margin: 0rem !important;
             </div>
             <nav class="nav3_dropdown_list w-dropdown-list">
               <a href="sokio-pamokos.html" class="nav3_link w-dropdown-link">šokio Stiliai ir Pamokos</a>
-              <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
+              <a href="sokio-pamokos-vaikuciams.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Šokio Pamokos Vaikučiams</a>
               <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
-              <a href="baleto-pamokos.html" aria-current="page" class="nav3_link w-dropdown-link w--current">Baleto Pamokos</a>
+              <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
               <a href="https://vestuviniaisokiai.lt" target="_blank" class="nav3_link new_page w-dropdown-link">Vestuvinio Šokio Pamokos</a>
             </nav>
@@ -256,72 +256,25 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div class="layout2_component">
                 <div class="layout2_content">
-                  <h1>Baleto Pamokos Vilniuje</h1>
+                  <h1>Šokio Pamokos Vaikučiams</h1>
                   <div class="padding-bottom padding-small"></div>
-                  <p>Baletas yra klasikinis šokio žanras, žinomas dėl savo tikslumo, grakštumo ir griežtos technikos. Apibrėžtas griežtu judesių ir pozicijų žodynu, baletas laikosi formalizuotų taisyklių, pabrėžiančių kontrolę, eleganciją ir simetriją. <br><br>Skirtingai nuo laisvesnių šokio formų, baletas orientuojasi į rafinuotus, disciplinuotus judesius, kurie dažnai atitinka nusistovėjusias tradicijas, tokias kaip šokis ant puantų, piruėtus ir didelius šuolius.</p>
-                  <div class="padding-bottom padding-medium"></div>
+                  <p>Norime pakviesti mažesnius 3-4 metų šokėjus, jungtis prie šokio pamokų trečiadieniais. <br><br>Šiose pamokose susipažinsime su judesio pagrindais, mokysimės šokti per žaidimo prizmę, lavinsime ritmo pojūtį ir žengsime pirmuosiuos žingsnius į spalvingą šokio pasaulį 🩰🎈<br><br><strong>Pamokėlės vyks vieną kartą per savaitę - trečiadieniais, 17.45 val. mūsų studijoje Manufaktūrų gatvėj 16, Vilniuje. Mėnesio kaina 40 eur.</strong><br></p>
+                  <div class="padding-bottom padding-large"></div>
                 </div>
-                <div class="layout2_image-wrapper"><img src="images/pexels-cottonbro-10640395.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/pexels-cottonbro-10640395-p-500.jpg 500w, images/pexels-cottonbro-10640395.jpg 640w" alt="Baleto Pamoka" class="layout2_image"></div>
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-11-02-at-12.24.35.jpg" loading="lazy" alt="" class="layout2_image"></div>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <section class="section_layout3">
         <div class="padding-global">
           <div class="container-large">
             <div class="padding-section-large">
-              <div class="pamoku_grid two_rows">
-                <div class="layout3_content">
-                  <h2 class="heading">Baleto Pamokos Vaikams</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Užsiėmimų metu jaunieji šokėjai ne tik lavins savo koordinaciją ir fizinį stiprumą, bet ir ugdys vaizduotę, pasitikėjimą savimi bei komandinio darbo įgūdžius. Šokdami pagal įvairią šiuolaikinę muziką ir atlikdami žaidybinio pobūdžio pratimus, jie atras judesio džiaugsmą ir mokysis išreikšti emocijas per kūną. Pamokos pritaikytos kiekvieno vaiko gebėjimams ir skatina laisvą kūrybiškumą bei smalsumą!<br><br>Užsiemimai vyksta pirmadieniais ir trečiadieniais.</p>
-                  <div class="padding-bottom padding-medium"></div>
+              <div class="layout2_component align-top">
+                <div class="layout2_content">
+                  <h3>Mokytoja</h3>
+                  <p>Pamokas ves patyrusi mokytoja ir choreografė - Eglė Ukanytė, turinti 8 m. patirtį mokant vaikus. Eglė turi pedagoginį ir šokio bei teatro išsilavinimą ir yra įgijusi stiprius šokio pagrindus skirtingose šokio stiliuose: šiuolaikinio, tautinio bei baleto žanruose.<br><br>Eglė savo pamokose didelį dėmesį skiria vaizduotės bei kūrybiškumo lavinimui, naudoja šiuolaikinius mokymo metodus.<br><br></p>
                 </div>
-                <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-a4db0e01" class="layout3_content">
-                  <h2 class="heading">Baleto Pamokos Suaugusiems</h2>
-                  <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Pamokos skirtos tiems, kurie nori geriau suprasti ir pajusti savo kūno veikimą. Šokdami pagal šiuolaikinę muziką, palaipsniui mokomės įvairių judesių, judame erdvėje ir stipriname fizinę ištvermę. Remdamiesi teatrinėmis ir šiuolaikinio šokio praktikomis, ugdome vaizduotę, išlaisviname kūrybiškumą, tobuliname koordinaciją ir stipriname emocinį intelektą.<br><br>Užsiemimai vyksta pirmadieniais ir trečiadieniais.</p>
-                  <div class="padding-bottom padding-medium"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section_komanda">
-        <div class="padding-global">
-          <div class="container-large">
-            <div class="padding-section-large">
-              <h2>Mūsų Komanda</h2>
-              <div class="padding-bottom padding-medium"></div>
-              <div class="team4_component">
-                <div class="team4_list">
-                  <div class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#egleu" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
-                    <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
-                  </div>
-                  <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#eglek" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320.484375px, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
-                    <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
-                  </div>
-                  <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper">
-                      <a href="https://kunu.studio/mokytojai#jolitas" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></a>
-                    </div>
-                    <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
-                    <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
-                  </div>
-                </div>
-              </div>
-              <div class="padding-top padding-medium">
-                <a href="mokytojai.html" class="button-secondary w-button">Susipažink su mūsų mokytojais</a>
+                <div class="layout2_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="layout2_image image_small"></div>
               </div>
             </div>
           </div>
@@ -355,7 +308,7 @@ margin: 0rem !important;
                   <div>Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
                 </div>
                 <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="670feb693f3482d4a4db0e01" data-wf-element-id="ca1f792b-a5d4-d265-6cb1-5636eb21a275">
+                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="6725fdc7c621bd945f100c71" data-wf-element-id="ca1f792b-a5d4-d265-6cb1-5636eb21a275">
                     <div class="form_field-wrapper"><label for="Name-2" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Name-2" data-name="Name 2" placeholder="Jūsų vardas" type="text" id="Name-2" required=""></div>
                     <div class="form_field-wrapper"><label for="Email-2" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Jūsų el.paštas" type="email" id="Email-2" required=""></div>
                     <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a27e-eb21a26f" class="form_field-wrapper"><label for="Telefonas-2" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas-2" data-name="Telefonas 2" placeholder="Jūsų telefonas" type="text" id="Telefonas-2"></div>
@@ -386,6 +339,27 @@ margin: 0rem !important;
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_kaip_rasti">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="location_componet">
+                <div class="layout2_lokacja">
+                  <h2>Kaip mus rasti?</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br><br>Einant Manufaktūrų gatve pasukt į kaire ties pastatu su Harley Davidson logotipu. <br><br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
+                    <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
+                  </p>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+                <div id="w-node-bbb01085-0eec-dbc8-e361-cd23d95b615d-d95b6147" class="map_embed">
+                  <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.811704820083!2d25.314612277876254!3d54.67774247270527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd956b8de532f7%3A0x5e19db2979de2867!2sKunu%20Studio!5e0!3m2!1sen!2slt!4v1729783412139!5m2!1sen!2slt" width="100%" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                 </div>
               </div>
             </div>
@@ -425,7 +399,7 @@ margin: 0rem !important;
                   <div class="footer1_link_list">
                     <a href="sokio-pamokos.html" class="footer1_link">Šokio Stiliai ir Pamokos</a>
                     <a href="siuolaikinio-sokio-pamokos.html" class="footer1_link">Šiuolaikinio Šokio Pamokos</a>
-                    <a href="baleto-pamokos.html" aria-current="page" class="footer1_link w--current">Baleto Pamokos</a>
+                    <a href="baleto-pamokos.html" class="footer1_link">Baleto Pamokos</a>
                     <a href="privacios-sokio-pamokos-ir-choreografija.html" class="footer1_link">Privačios Šokio Pamokos</a>
                   </div>
                 </div>
