--- a/sokio-pamokos.html
+++ b/sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Oct 31 2024 18:53:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Nov 02 2024 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="670fd3c97554eace82822a1f" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -221,6 +221,7 @@ margin: 0rem !important;
             </div>
             <nav class="nav3_dropdown_list w-dropdown-list">
               <a href="sokio-pamokos.html" aria-current="page" class="nav3_link w-dropdown-link w--current">šokio Stiliai ir Pamokos</a>
+              <a href="sokio-pamokos-vaikuciams.html" class="nav3_link w-dropdown-link">Šokio Pamokos Vaikučiams</a>
               <a href="siuolaikinio-sokio-pamokos.html" class="nav3_link w-dropdown-link">Šiuolaikinio Šokio Pamokos</a>
               <a href="baleto-pamokos.html" class="nav3_link w-dropdown-link">Baleto Pamokos</a>
               <a href="privacios-sokio-pamokos-ir-choreografija.html" class="nav3_link w-dropdown-link">Privačios Pamokos</a>
@@ -271,19 +272,28 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div class="pamoku_grid">
                 <div class="layout3_content">
-                  <h2 class="heading">Šokio Pamokos Vaikams</h2>
+                  <h2 class="heading-style-h3">Šokio Pamokos Mažyliams</h2>
+                  <div class="padding-bottom padding-small"></div>
+                  <p class="paragraph">Norime pakviesti mažesnius 3-4 metų šokėjus, jungtis prie šokio pamokų trečiadieniais. Šiose pamokose susipažinsime su judesio pagrindais, mokysimės šokti per žaidimo prizmę, lavinsime ritmo pojūtį ir žengsime pirmuosiuos žingsnius į spalvingą šokio pasaulį 🩰🎈<br></p>
+                  <div class="padding-top padding-small">
+                    <a href="sokio-pamokos-vaikuciams.html" class="button w-button">Sužinok daugiau</a>
+                  </div>
+                  <div class="padding-bottom padding-medium"></div>
+                </div>
+                <div id="w-node-_2bf031c1-9aec-aacd-8539-ec6261f5faff-82822a1f" class="layout3_content">
+                  <h2 class="heading-style-h3">Šokio Pamokos Vaikams</h2>
                   <div class="padding-bottom padding-small"></div>
                   <p class="paragraph">Linksmi ir žaismingi šokių užsiėmimai 4-7 metų vaikams, kuriuose derinami baleto, lankstumo, ritmikos pratimai bei judesio žaidimai. Pamokų tikslas supažindinti vaikučius su baleto technikos pagrindais bei paruošti tolimesniai šokio kelionei.</p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
                 <div id="w-node-_03879c4e-7e23-36a6-474a-1841d8d51f76-82822a1f" class="layout3_content">
-                  <h2 class="heading">Šokio Pamokos Paaugliams</h2>
+                  <h2 class="heading-style-h3">Šokio Pamokos Paaugliams</h2>
                   <div class="padding-bottom padding-small"></div>
                   <p class="paragraph">8-16 metų vaikams skirtos šiuolaikinio šokio pamokos, kuriose tobulinami šokio pagrindai, įgyjami baleto ir šiuolaikinio šokio pagrindai, pasiruošiama koncertams ir choreografiniam ugdymui.</p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
                 <div id="w-node-_2d878176-d008-5979-aaf2-f047a4b4eb89-82822a1f" class="layout3_content">
-                  <h2 class="heading">Šokio Pamokos Suaugusiems</h2>
+                  <h2 class="heading-style-h3">Šokio Pamokos Suaugusiems</h2>
                   <div class="padding-bottom padding-small"></div>
                   <p class="paragraph">Pamokos skirtos asmenims, norintiems suprasti ir pajausti kaip veikia jų kūnas. Šokio metu, pagal šiuolaikinę muziką po truputį susipažįstame su judesiu, šokame erdvėje, stiprėjame fiziškai. Pagal treatrines ir šiuolaikinio šokio praktikas laviname vaizduotę, išlaisvėjame, tobuliname koordinacija bei keliame emocinį intelektą.</p>
                   <div class="padding-bottom padding-medium"></div>
@@ -304,6 +314,13 @@ margin: 0rem !important;
                 <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_layout3">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large"></div>
           </div>
         </div>
       </section>
@@ -371,17 +388,23 @@ margin: 0rem !important;
               <div class="team4_component">
                 <div class="team4_list">
                   <div class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#egleu" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></a>
+                    </div>
                     <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
                     <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#eglek" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320.484375px, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></a>
+                    </div>
                     <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
                     <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
+                    <div class="team4_image-wrapper">
+                      <a href="https://kunu.studio/mokytojai#jolitas" class="w-inline-block"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 45vw, (max-width: 991px) 320px, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></a>
+                    </div>
                     <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
                     <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
@@ -418,11 +441,10 @@ margin: 0rem !important;
             <div class="padding-bottom padding-medium"></div>
             <div class="footer1_top">
               <div class="footer1_content-left">
-                <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="div-block-2">
+                <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="footer_left_block">
                   <div id="w-node-_664c0f4a-47d6-b554-9de9-a7b2adea4727-67c79560" class="image_wrapper_footer"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="250px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt=""></div>
                   <div class="text-size-small">Ukanytes Projects, VšĮ<br>Įmonės kodas: 306675363<br>Manufaktūrų g. 16, LT-11342 Vilnius<br></div>
                   <div class="footer1_bottom">
-                    <div class="text-size-small">© Kunu Studio</div>
                     <div class="footer1_social">
                       <a aria-label="Instagram" href="https://www.instagram.com/kunustudio.vilnius/" class="social_link w-inline-block">
                         <div class="social_icon w-embed"><svg aria-hidden="true" fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -460,6 +482,7 @@ margin: 0rem !important;
               </div>
             </div>
             <div class="footer_padding"></div>
+            <div class="text-size-small">© Kunu Studio</div>
           </div>
         </div>
       </div>
